2006-02-06  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/test-parser.c: (entry_added), (test_parsing):
	Also print the genre of the URI, if available, and make parsing faster
	using an idle, instead of a timeout
	* src/plparse/totem-pl-parser.c:
	(totem_pl_parser_add_pls_with_contents): try to parse further inside
	.pls playlists to work around broken setups (Closes: #318749)

2006-02-05  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_show), (bacon_video_widget_hide),
	(bvw_handle_application_message), (bvw_bus_message_cb),
	(parse_stream_info), (bacon_video_widget_open_with_subtitle),
	(bacon_video_widget_set_logo_mode), (bacon_video_widget_new):
	  When running in metadata mode, don't announce any metadata
	  to totem until we are sure we got all of it, otherwise the
	  nautilus properties page will only show whatever tags happen
	  to come up first.
	  Also, make sure we don't try to show or hide GdkWindows when
	  they don't exist, like in metadata mode (#329527).

2006-02-05  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd

2006-02-03  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_new):
	  Add missing perdiod to error message string, which also
	  makes it match the string used in the 0.8 backend.

2006-02-03  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bvw_error_from_gst_error):
	  Show a more meaningful error message when playback fails
	  because the decoder/demuxer can only operate pull-based,
	  but the source does not support that (e.g. playing AVI
	  videos or FLAC files over the network) (#328830).

2006-02-03  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(get_metadata_type_name), (bacon_video_widget_get_metadata_string),
	(bacon_video_widget_get_metadata_int),
	(bacon_video_widget_get_metadata_bool),